--- a/notebooks/hasan_test.ipynb
+++ b/notebooks/hasan_test.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Generating the dataset"
+    "#### Generating the datasett"
    ],
    "metadata": {
     "collapsed": false,
